--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "engines": {
     "node": ">=10.0"
   },
+  "keywords": [
+    "console",
+    "termbox",
+    "graphics"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/RauliL/termbox2-node"
